--- a/DocuSign/.classpath
+++ b/DocuSign/.classpath
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="resources"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/humberto/OneDrive/Documents/docusign-java-client-master/docusign-java-client-master/target/lib/hamcrest-core-1.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/humberto/OneDrive/Documents/docusign-java-client-master/docusign-java-client-master/target/lib/jackson-annotations-2.7.0.jar"/>
@@ -19,6 +20,7 @@
 	<classpathentry exported="true" kind="lib" path="C:/Users/humberto/OneDrive/Documents/docusign-java-client-master/docusign-java-client-master/target/lib/migbase64-2.2.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/humberto/OneDrive/Documents/docusign-java-client-master/docusign-java-client-master/target/lib/mimepull-1.9.3.jar"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/humberto/OneDrive/Documents/docusign-java-client-master/docusign-java-client-master/target/lib/swagger-annotations-1.5.8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/humberto/Downloads/sqlite-jdbc-3.20.0.jar"/>
 	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="C:/Users/humberto/OneDrive/Documents/org.apache.oltu.oauth2.client-1.0.2.jar"/>
 	<classpathentry kind="output" path="bin"/>
