# WARNING: head commit changed in the meantime
Change-Id: Ib1b5a14a714b52fb9a95425f3b56c3ab7654d9da

--- a/DocuSign/src/config.properties
+++ b/DocuSign/src/config.properties
@@ -5,3 +5,5 @@ BaseUrl = https://demo.docusign.net/restapi
 RequestSignatureFilePath = C:\DocuSign\RequestSignatureFiles
 SignedFilesPath = C:\DocuSign\CustomerSignedFiles
 SqliteUrl = C:\DocuSign\DocuSign.DB
+ProxyHost = www.esi.com
+ProxyPort = 8080
