--- a/DocuSign/src/resources/config/config.properties
+++ b/DocuSign/src/resources/config/config.properties
@@ -5,3 +5,5 @@ BaseUrl = https://demo.docusign.net/restapi
 RequestSignatureFilePath = C:\\DocuSign\\RequestSignatureFiles\\
 SignedFilesPath = C:\\DocuSign\\CustomerSignedFiles\\
 SqliteUrl = jdbc:sqlite:C://DocuSign/DocuSign.db
+ProxyPort= 880
+Proxy = sssss
